--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -7,8 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "tsx watch src/index.ts",
     "start": "tsx src/index.ts",
-    "migrate": "bunx drizzle-kit migrate",
-    "generate": "bunx drizzle-kit generate"
+    "migrate": "npx drizzle-kit migrate",
+    "generate": "npx drizzle-kit generate"
   },
   "keywords": [],
   "author": "",
